# petsurfer-bids

./: README.md  README.rst  dockerfile  makefile  petsurfer-km  pyproject.toml
docs/participant/: sub-PS11_ses-baseline.html
petsurfer_km/: __init__.py  __main__.py  execution.py  inputs.py  petsurfer-km-bids-config.json  run.py  run_group.py  tsv2petsurfer.py
petsurfer_km/cli/: parser.py  run.py
petsurfer_km/freebrowse/: freebrowse-2.2.1.html
petsurfer_km/freebrowse/templates/: 20260129-petsurfer-km-template.nvd  petsurfer-km-template.nvd
petsurfer_km/steps/: __init__.py  step01_preprocessing.py  step02_volumetric.py  step03_surface.py  step04_kinetic.py  step05_bidsify.py  step06_report.py
scripts/: petsurfer-km  petsurfer-prep
